--- a/templates/create_new_user.html
+++ b/templates/create_new_user.html
@@ -13,33 +13,33 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 </head>
+
 <body>
-
 <div class="login-form">
-    <form action='{{ url_for("add_order") }}' method="POST">
-        <div class="avatar"><i class="material-icons">&#xe90e;</i></div>
-        <h4 class="modal-title">New Request</h4>
-
+    <form action='{{ url_for("add_user") }}' method="POST" autocomplete="off">
+        <div class="avatar"><i class="material-icons">&#xe7fe;</i></div>
+        <h4 class="modal-title">Create New User</h4>
+        <div class="form-group">
+            <label class="form-group">Email: </label>
+            <input class="form-control" type='email' name='email' id='email' placeholder="Email" autocomplete="off"
+        </div>
+        <br />
+        <div class="form-group">
+            <label class="form-group">Password: </label>
+            <input class="form-control" type="password" name="password" placeholder="Password" autocomplete="new-password">
+        </div>
         <div class="form-group">
             <label class="form-group">Industry: </label>
             <select class="form-control" name='industry' id='industry'>
                 <option value='Metal'>Metal</option>
                 <option value='Wood'>Wood</option>
                 <option value='Electric'>Electric</option>
-            </select>
+            </select> <br/>
         </div>
-        <div class="form-group">
-            <label class="form-group">Item Description: </label>
-            <textarea class="form-control" name="description" placeholder="Item description"></textarea>
-        </div>
-
-        <div class="form-group">
-            <label class="form-group">Email: </label>
-            <input type="text" class="form-control" type='email' name='email' id='email' placeholder="Email" required>
-        </div>
-
-        <input type="submit" class="btn btn-primary btn-block btn-lg" value="Send">
+        <input type="submit" class="btn btn-primary btn-block btn-lg" value="Create User">
     </form>
 </div>
 </body>
+
+
 </html>
