--- a/templates/login.html
+++ b/templates/login.html
@@ -14,27 +14,73 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 </head>
 <body>
-<div class="login-form">
-    <form action='{{ url_for("login") }}' method="POST">
-        <div class="avatar"><i class="material-icons">&#xE7FF;</i></div>
-        <h4 class="modal-title">Log In</h4>
-        <div class="form-group">
-            <input class="form-control" type='email' name='email' id='email' placeholder="Email" required>
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password" required>
-        </div>
-        <div class="form-group small clearfix">
-            <label class="checkbox-inline"><input type="checkbox"> Remember me</label>
-            <a href="#" class="forgot-link">Forgot Password?</a>
-        </div>
-        <input type="submit" class="btn btn-primary btn-block btn-lg" value="Login">
-        {% if error %}
-        <br/>
-        <p style="color:red" class="error"><strong>Error:</strong> {{ error }}
-            {% endif %}
-    </form>
-    <div class="text-center small">Don't have an account? <a href='{{ url_for("create_new_user") }}'>Sign up</a></div>
+<div>
+    <nav class="navbar navbar-default">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-2">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Brand</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="navbar-collapse-2">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Works</a></li>
+                    <li><a href="#">News</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li>
+                        <a class="btn btn-default btn-outline btn-circle" data-toggle="collapse" href="#nav-collapse2" aria-expanded="false" aria-controls="nav-collapse2">Sign in</a>
+                    </li>
+                </ul>
+                <div class="collapse nav navbar-nav nav-collapse" id="nav-collapse2">
+                    <form class="navbar-form navbar-right form-inline" role="form">
+                        <div class="form-group">
+                            <label class="sr-only" for="Email">Email</label>
+                            <input type="email" class="form-control" id="Email" placeholder="Email" autofocus required/>
+                        </div>
+                        <div class="form-group">
+                            <label class="sr-only" for="Password">Password</label>
+                            <input type="password" class="form-control" id="Password" placeholder="Password" required/>
+                        </div>
+                        <button type="submit" class="btn btn-success">Sign in</button>
+                    </form>
+                </div>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container -->
+    </nav><!-- /.navbar -->
+
+
+    <div class="login-form">
+        <form action='{{ url_for("login") }}' method="POST">
+            <div class="avatar"><i class="material-icons">&#xE7FF;</i></div>
+            <h4 class="modal-title">Log In</h4>
+            <div class="form-group">
+                <input class="form-control" type='email' name='email' id='email' placeholder="Email" required>
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="password" name="password" placeholder="Password" required>
+            </div>
+            <div class="form-group small clearfix">
+                <label class="checkbox-inline"><input type="checkbox"> Remember me</label>
+                <a href="#" class="forgot-link">Forgot Password?</a>
+            </div>
+            <input type="submit" class="btn btn-primary btn-block btn-lg" value="Login">
+            {% if error %}
+            <br/>
+            <p style="color:red" class="error"><strong>Error:</strong> {{ error }}
+                {% endif %}
+        </form>
+        <div class="text-center small">Don't have an account? <a href='{{ url_for("create_new_user") }}'>Sign up</a></div>
+    </div>
 </div>
 </body>
 </html>
