--- a/templates/order.html
+++ b/templates/order.html
@@ -33,29 +33,11 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="navbar-collapse-2">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Home</a></li>
+                    <li><a href='{{ url_for("order") }}'>Request Offer</a></li>
+                    <li><a href='{{ url_for("login") }}'>Log In</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Works</a></li>
-                    <li><a href="#">News</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li>
-                        <a class="btn btn-default btn-outline btn-circle" data-toggle="collapse" href="#nav-collapse2" aria-expanded="false" aria-controls="nav-collapse2">Sign in</a>
-                    </li>
                 </ul>
-                <div class="collapse nav navbar-nav nav-collapse" id="nav-collapse2">
-                    <form class="navbar-form navbar-right form-inline" role="form">
-                        <div class="form-group">
-                            <label class="sr-only" for="Email">Email</label>
-                            <input type="email" class="form-control" id="Email" placeholder="Email" autofocus required/>
-                        </div>
-                        <div class="form-group">
-                            <label class="sr-only" for="Password">Password</label>
-                            <input type="password" class="form-control" id="Password" placeholder="Password" required/>
-                        </div>
-                        <button type="submit" class="btn btn-success">Sign in</button>
-                    </form>
-                </div>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container -->
     </nav><!-- /.navbar -->
@@ -64,32 +46,34 @@
     <!-- Main Content -->
     <div class="container-fluid">
         <div class="side-body">
-            <center>
-                <form class="login-form" action='{{ url_for("add_order") }}' method="POST">
-                    <div class="avatar"><i class="material-icons">&#xe90e;</i></div>
-                    <h4 class="modal-title">New Request</h4>
+            <div class='login-form'>
+                <center>
+                    <form class="login-form" action='{{ url_for("add_order") }}' method="POST">
+                        <div class="avatar"><i class="material-icons">&#xe90e;</i></div>
+                        <h4 class="modal-title">New Request</h4>
 
-                    <div class="form-group">
-                        <label class="form-group">Industry: </label>
-                        <select class="form-control" name='industry' id='industry'>
-                            <option value='Metal'>Metal</option>
-                            <option value='Wood'>Wood</option>
-                            <option value='Electric'>Electric</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label class="form-group">Item Description: </label>
-                        <textarea class="form-control" name="description" placeholder="Item description"></textarea>
-                    </div>
+                        <div class="form-group">
+                            <label class="form-group">Industry: </label>
+                            <select class="form-control" name='industry' id='industry'>
+                                <option value='Metal'>Metal</option>
+                                <option value='Wood'>Wood</option>
+                                <option value='Electric'>Electric</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label class="form-group">Item Description: </label>
+                            <textarea class="form-control" name="description" placeholder="Item description"></textarea>
+                        </div>
 
-                    <div class="form-group">
-                        <label class="form-group">Email: </label>
-                        <input type="text" class="form-control" type='email' name='email' id='email' placeholder="Email" required>
-                    </div>
+                        <div class="form-group">
+                            <label class="form-group">Email: </label>
+                            <input type="text" class="form-control" type='email' name='email' id='email' placeholder="Email" required>
+                        </div>
 
-                    <input type="submit" class="btn btn-primary btn-block btn-lg" value="Send">
-                </form>
-            </center>
+                        <input type="submit" class="btn btn-primary btn-block btn-lg" value="Send">
+                    </form>
+                </center>
+            </div>
         </div>
     </div>
 </div>
