--- a/templates/order.html
+++ b/templates/order.html
@@ -15,47 +15,9 @@
     <script type="text/javascript" src="{{ url_for('static', filename='main.js') }}"></script>
 </head>
 <body>
-<!-- Second navbar for sign in -->
+{% extends 'base.html' %}
+{% block content %}
 <div>
-    <nav class="navbar navbar-default">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-2">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Mockup</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="navbar-collapse-2">
-                <ul class="nav navbar-nav navbar-right">
-                     {% if logged == 'true' %}
-                    <li><a href='{{ url_for("my_orders") }}'>My Orders</a></li>
-                    {% endif %}
-                    <li><a href='{{ url_for("order") }}'>Request Offer</a></li>
-                    {% if logged != 'true' %}
-                    <li><a href='{{ url_for("login") }}'>Log In</a></li>
-                     {% else %}
-                    <li><a href='{{ url_for("logout") }}'>Log Out</a></li>
-                    {% endif %}
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li>
-                    {% if logged == 'true'%}
-                    <a> Hello, {{ email }} </a>
-                    {% else %}
-                    <a> Hello, Guest</a>
-                    {% endif %}
-                    </li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container -->
-    </nav><!-- /.navbar -->
-
     <!-- Main Content -->
     <div class="container-fluid">
         <div class="side-body">
@@ -80,9 +42,8 @@
 
                         <div class="form-group">
                             <label class="form-group">Email: </label>
-                            <input class="form-control" type='email'name='email' id='email' placeholder="Email" required  {% if logged=='true'%} value="{{ email }}" disabled="disabled" {% endif %} >
+                            <input class="form-control" type='email'name='email' id='email' placeholder="Email" required  {% if logged=='true'%} value="{{ email }}" readonly {% endif %} >
                         </div>
-
                         <input type="submit" class="btn btn-primary btn-block btn-lg" value="Send">
                     </form>
                 </center>
@@ -90,7 +51,7 @@
         </div>
     </div>
 </div>
-
+{% endblock %}
 </body>
 </html>
 
