--- a/templates/login.html
+++ b/templates/login.html
@@ -14,48 +14,9 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 </head>
 <body>
+{% extends 'base.html' %}
+{% block content %}
 <div>
-   <nav class="navbar navbar-default">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-2">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Mockup</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="navbar-collapse-2">
-                <ul class="nav navbar-nav navbar-right">
-                     {% if logged == 'true' %}
-                    <li><a href='{{ url_for("my_orders") }}'>My Orders</a></li>
-                    {% endif %}
-                    <li><a href='{{ url_for("order") }}'>Request Offer</a></li>
-                    {% if logged != 'true' %}
-                    <li><a href='{{ url_for("login") }}'>Log In</a></li>
-                     {% else %}
-                    <li><a href='{{ url_for("logout") }}'>Log Out</a></li>
-                    {% endif %}
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li>
-                    {% if logged == 'true'%}
-                    <a> Hello, {{ email }} </a>
-                    {% else %}
-                    <a> Hello, Guest</a>
-                    {% endif %}
-                    </li>
-                </ul>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container -->
-    </nav><!-- /.navbar -->
-
-
     <div class="login-form">
         <form action='{{ url_for("login") }}' method="POST">
             <div class="avatar"><i class="material-icons">&#xE7FF;</i></div>
@@ -79,6 +40,7 @@
         <div class="text-center small">Don't have an account? <a href='{{ url_for("create_new_user") }}'>Sign up</a></div>
     </div>
 </div>
+{% endblock %}
 </body>
 </html>
 
