--- a/templates/my_orders.html
+++ b/templates/my_orders.html
@@ -15,74 +15,39 @@
     <script type="text/javascript" src="{{ url_for('static', filename='main.js') }}"></script>
 </head>
 <body>
-<!-- Second navbar for sign in -->
+{% extends 'base.html' %}
+{% block content %}
 <div>
-    <nav class="navbar navbar-default">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-2">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Mockup</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="navbar-collapse-2">
-                <ul class="nav navbar-nav navbar-right">
-                     {% if logged == 'true' %}
-                    <li><a href='{{ url_for("my_orders") }}'>My Orders</a></li>
-                    {% endif %}
-                    <li><a href='{{ url_for("order") }}'>Request Offer</a></li>
-                    {% if logged != 'true' %}
-                    <li><a href='{{ url_for("login") }}'>Log In</a></li>
-                    {% else %}
-                    <li><a href='{{ url_for("logout") }}'>Log Out</a></li>
-                    {% endif %}
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li>
-                        {% if logged == 'true'%}
-                        <a> Hello, {{ email }} </a>
-                        {% else %}
-                        <a> Hello, Guest</a>
-                        {% endif %}
-                    </li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container -->
-    </nav><!-- /.navbar -->
-
     <!-- Main Content -->
     <div class="container">
-        <div class="side-body">
-            <div class='table-responsive'>
-                <h1> New requests in your industry: </h1> <br />
-                <table class ="table">
-                    {% for order in orders %}
-                   <tr>
-                       <td>
-                           {{ order[0] }}
-                       </td>
+        <center><h1> My Orders: </h1> <br/></center>
+        <table class="table">
+            <thead>
+            <tr>
+                <th>#</th>
+                <th>Consumer Email</th>
+                <th>Description</th>
+            </tr>
+            </thead>
+            {% for order in orders %}
+            <tr>
+                <td>
+                    {{ order[0] }}
+                </td>
 
-                       <td>
-                           {{ order[1] }}
-                       </td>
+                <td>
+                    {{ order[1] }}
+                </td>
 
-                       <td>
-                           {{ order[2] }}
-                       </td>
-                   </tr>
-                    {% endfor %}
-                </table>
-            </div>
-        </div>
+                <td>
+                    {{ order[2] }}
+                </td>
+            </tr>
+            {% endfor %}
+        </table>
     </div>
 </div>
-
+{% endblock %}
 </body>
 </html>
 
