--- a/templates/available_requests.html
+++ b/templates/available_requests.html
@@ -20,7 +20,7 @@
 <div>
     <!-- Main Content -->
     <div class="container">
-        <center><h1> New requests in my industry: </h1> <br/></center>
+         <h3> New requests in my industry: </h3>
         <table class="table">
             <thead>
             <tr>
