--- a/static/main.css
+++ b/static/main.css
@@ -155,7 +155,7 @@ th {
   color:white;
   background:#42ae68;
   border-bottom:4px solid #9ea7af;
-  border-right: 1px solid #343a45;
+  border-right: none;
   font-size:23px;
   font-weight: 100;
   padding:24px;
@@ -220,7 +220,7 @@ td {
   font-weight:300;
   font-size:18px;
   text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
-  border-right: 1px solid #C1C3D1;
+  border-right: none;
 }
 
 td:last-child {
